// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adds neither extra class when just alternate property is true 1`] = `
<div>
  <div>
    <li
      class="ListItem"
    >
      <div>
        <span
          class="ListItem-Child"
        >
          asdf
        </span>
      </div>
    </li>
  </div>
</div>
`;

exports[`adds the active class when active property is true 1`] = `
<div>
  <div>
    <li
      class="ListItem active"
    >
      <div>
        <span
          class="ListItem-Child"
        >
          asdf
        </span>
      </div>
    </li>
  </div>
</div>
`;

exports[`adds the alternate class when active and alternate properties are true 1`] = `
<div>
  <div>
    <li
      class="ListItem alternate"
    >
      <div>
        <span
          class="ListItem-Child"
        >
          asdf
        </span>
      </div>
    </li>
  </div>
</div>
`;

exports[`renders the child I pass 1`] = `
<div>
  <div>
    <li
      class="ListItem"
    >
      <div>
        <span
          class="ListItem-Child"
        >
          asdf
        </span>
      </div>
    </li>
  </div>
</div>
`;

exports[`renders without crashing 1`] = `
<div>
  <div>
    <li
      class="ListItem"
    >
      <div>
        <span
          class="ListItem-Child"
        >
          asdf
        </span>
      </div>
    </li>
  </div>
</div>
`;

exports[`shows remove button when hovered 1`] = `
<ListItem
  remove={[Function]}
>
  <CSSTransition
    classNames="item"
    in={true}
    timeout={300}
    unmountOnExit={true}
  >
    <div>
      <div>
        <li
          className="ListItem"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div>
            <span
              className="ListItem-Child"
              onClick={[Function]}
            >
              asdf
            </span>
          </div>
          <span
            className="ListItem-Remove"
          >
            <RemoveButton
              onClick={[Function]}
            >
              <button
                className="Remove-Button"
                onClick={[Function]}
              >
                <img
                  alt="remove"
                  className="redx"
                  src="../public/img/red-x.svg"
                />
              </button>
            </RemoveButton>
          </span>
        </li>
      </div>
    </div>
  </CSSTransition>
</ListItem>
`;

exports[`shows the badge when alert is set 1`] = `
<div>
  <div>
    <li
      class="ListItem active"
    >
      <div>
        <div
          class="alert"
        >
          
        </div>
        <span
          class="ListItem-Child"
        >
          asdf
        </span>
      </div>
    </li>
  </div>
</div>
`;
